out_seed2.txt

> plattform-temp@0.1.0 seed
> ts-node prisma/seed.ts

C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
prisma/seed.ts(53,16): error TS2353: Object literal may only specify known properties, and 'userId' does not exist in type 'InstructorSubscriptionWhereUniqueInput'.
prisma/seed.ts(56,9): error TS2353: Object literal may only specify known properties, and 'userId' does not exist in type 'Without<InstructorSubscriptionCreateInput, InstructorSubscriptionUncheckedCreateInput> & InstructorSubscriptionUncheckedCreateInput'.

    at createTSError (C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1943:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\azuln\Documentos\flowi_solutions\Plattform\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
  diagnosticCodes: [ 2353, 2353 ]
}
